--- a/src/libProgressReporter_qt4/CMakeLists.txt
+++ b/src/libProgressReporter_qt4/CMakeLists.txt
@@ -8,45 +8,43 @@ set(ProgressReporter_qt4_SOURCES ProgressReporterQt4.cc)
 
 set(CMAKE_AUTOMOC ON)
 
-add_library(ProgressReporter_qt4
-  ${ProgressReporter_qt4_SOURCES} ${ProgressReporter_qt4_HEADERS})
-set_target_properties(ProgressReporter_qt4 PROPERTIES
-  VERSION ${ProgressReporter_qt4_VERSION}
-  SOVERSION ${ProgressReporter_qt4_VERSION_MAJOR})
-target_link_libraries(ProgressReporter_qt4 Qt4::QtGui ProgressReporter)
-
+if (BUILD_SHARED_LIBS OR BUILD_STATIC_LIBS)
 # Install development headers
 install(FILES ${ProgressReporter_qt4_HEADERS}
   DESTINATION include/${PACKAGE}/libProgressReporter_qt4)
+endif()
 
-# Install libraries
-if(WIN32)
-  # On windows store DLLs alongside the binaries
+# Build shared library if requested
+if (BUILD_SHARED_LIBS)
+  add_library(ProgressReporter_qt4 SHARED
+    ${ProgressReporter_qt4_SOURCES} ${ProgressReporter_qt4_HEADERS})
+  set_target_properties(ProgressReporter_qt4 PROPERTIES
+    VERSION ${ProgressReporter_qt4_VERSION}
+    SOVERSION ${ProgressReporter_qt4_VERSION_MAJOR})
+  target_link_libraries(ProgressReporter_qt4 PUBLIC Qt4::QtGui ProgressReporter)
   install(TARGETS ProgressReporter_qt4
-    LIBRARY DESTINATION bin
-    RUNTIME DESTINATION bin
-    ARCHIVE DESTINATION lib)
-else()
-  install(TARGETS ProgressReporter_qt4
+    EXPORT iRoCS-ToolboxTargets
     LIBRARY DESTINATION lib
-    ARCHIVE DESTINATION lib)
-endif(WIN32)
+    RUNTIME DESTINATION bin
+    INCLUDES DESTINATION include/${PACKAGE}/libProgressReporter_qt4)
+endif()
 
-# Explicitly add static library build if both static and shared libraries
-# are requested
-if(BUILD_STATIC_LIBS AND BUILD_SHARED_LIBS)
+# Build static library if requested
+if(BUILD_STATIC_LIBS)
   add_library(ProgressReporter_qt4_static STATIC
     ${ProgressReporter_qt4_SOURCES} ${ProgressReporter_qt4_HEADERS})
-  target_link_libraries(ProgressReporter_qt4_static Qt4::QtGui
-    ProgressReporter_static)
-  install(TARGETS ProgressReporter_qt4_static ARCHIVE DESTINATION lib)
+  target_link_libraries(ProgressReporter_qt4_static
+    PUBLIC Qt4::QtGui ProgressReporter_static)
+  install(TARGETS ProgressReporter_qt4_static
+    EXPORT iRoCS-ToolboxTargets
+    ARCHIVE DESTINATION lib
+    INCLUDES DESTINATION include/${PACKAGE}/libProgressReporter_qt4)
 
   # On Linux rename static library to match shared library name
   if(UNIX)
     SET_TARGET_PROPERTIES(ProgressReporter_qt4_static PROPERTIES
-      OUTPUT_NAME ProgressReporter_qt4 CLEAN_DIRECT_OUTPUT 1)
+      OUTPUT_NAME ProgressReporter_qt4)
   endif(UNIX)
-
-endif(BUILD_STATIC_LIBS AND BUILD_SHARED_LIBS)
+endif()
 
 set(CMAKE_AUTOMOC OFF)
