--- a/src/plugins/DetectNuclei/CMakeLists.txt
+++ b/src/plugins/DetectNuclei/CMakeLists.txt
@@ -10,41 +10,13 @@ set(PluginDetectNuclei_HEADERS
 set(PluginDetectNuclei_SOURCES
   DetectNucleiParametersDialog.cc DetectNucleiThread.cc PluginDetectNuclei.cc)
 
-add_library(PluginDetectNuclei
+add_library(PluginDetectNuclei MODULE
   ${PluginDetectNuclei_SOURCES} ${PluginDetectNuclei_HEADERS})
-target_link_libraries(PluginDetectNuclei Labelling_qt4 IRoCS)
 
-# Install development headers
-install(FILES ${PluginDetectNuclei_HEADERS}
-  DESTINATION include/${PACKAGE}/plugins/libPluginDetectNuclei)
+target_link_libraries(PluginDetectNuclei PRIVATE Labelling_qt4 IRoCS)
 
-# Install libraries
-if(WIN32)
-  # On windows store DLLs alongside the binaries
-  install(TARGETS PluginDetectNuclei
-    LIBRARY DESTINATION share/${PACKAGE}/plugins NAMELINK_SKIP
-    RUNTIME DESTINATION share/${PACKAGE}/plugins
-    ARCHIVE DESTINATION lib)
-else()
-  install(TARGETS PluginDetectNuclei
-    LIBRARY DESTINATION share/${PACKAGE}/plugins NAMELINK_SKIP
-    ARCHIVE DESTINATION lib)
-endif(WIN32)
-
-# Explicitly add static library build if both static and shared libraries are
-# requested
-if(BUILD_STATIC_LIBS AND BUILD_SHARED_LIBS)
-  add_library(PluginDetectNuclei_static STATIC
-    ${PluginDetectNuclei_SOURCES} ${PluginDetectNuclei_HEADERS})
-  target_link_libraries(PluginDetectNuclei_static Labelling_qt4 IRoCS)
-  install(TARGETS PluginDetectNuclei_static ARCHIVE DESTINATION lib)
-
-  # On Linux rename static library to match shared library name
-  if(UNIX)
-    SET_TARGET_PROPERTIES(PluginDetectNuclei_static PROPERTIES
-      OUTPUT_NAME PluginDetectNuclei CLEAN_DIRECT_OUTPUT 1)
-  endif(UNIX)
-
-endif(BUILD_STATIC_LIBS AND BUILD_SHARED_LIBS)
+install(TARGETS PluginDetectNuclei
+  LIBRARY DESTINATION share/${PACKAGE}/plugins NAMELINK_SKIP
+  RUNTIME DESTINATION share/${PACKAGE}/plugins)
 
 set(CMAKE_AUTOMOC OFF)
