--- a/src/tools/attachIRoCSToCellSegmentation/CMakeLists.txt
+++ b/src/tools/attachIRoCSToCellSegmentation/CMakeLists.txt
@@ -1,13 +1,15 @@
 add_executable(attachIRoCSToCellSegmentation attachIRoCSToCellSegmentation.cc)
 
 if (BUILD_STATIC_TOOLS)
-  target_link_libraries(attachIRoCSToCellSegmentation PUBLIC "-static")
+  target_link_libraries(attachIRoCSToCellSegmentation PRIVATE "-static")
   target_link_libraries(attachIRoCSToCellSegmentation
-    LINK_PUBLIC IRoCS_static_tools segmentation_static_tools
-    cmdline_static_tools)
-else()
+    PRIVATE IRoCS_static_tools segmentation_static_tools cmdline_static_tools)
+elseif (BUILD_STATIC_LIBS)
   target_link_libraries(attachIRoCSToCellSegmentation
-    LINK_PUBLIC IRoCS segmentation cmdline)
+    PRIVATE IRoCS_static segmentation_static cmdline_static)
+elseif (BUILD_SHARED_LIBS)
+  target_link_libraries(attachIRoCSToCellSegmentation
+    PRIVATE IRoCS segmentation cmdline)
 endif()
 
 install(TARGETS attachIRoCSToCellSegmentation RUNTIME DESTINATION bin)
