--- a/src/tools/computeCellFeatures/CMakeLists.txt
+++ b/src/tools/computeCellFeatures/CMakeLists.txt
@@ -1,13 +1,15 @@
 add_executable(computeCellFeatures computeCellFeatures.cc)
 
 if (BUILD_STATIC_TOOLS)
-  target_link_libraries(computeCellFeatures PUBLIC "-static")
+  target_link_libraries(computeCellFeatures PRIVATE "-static")
   target_link_libraries(computeCellFeatures
-    LINK_PUBLIC IRoCS_static_tools segmentation_static_tools
+    PRIVATE IRoCS_static_tools segmentation_static_tools
     cmdline_static_tools)
-else()
+elseif (BUILD_STATIC_LIBS)
   target_link_libraries(computeCellFeatures
-    LINK_PUBLIC IRoCS segmentation cmdline)
+    PRIVATE IRoCS_static segmentation_static cmdline_static)
+elseif (BUILD_SHARED_LIBS)
+  target_link_libraries(computeCellFeatures PRIVATE IRoCS segmentation cmdline)
 endif()
 
 install(TARGETS computeCellFeatures RUNTIME DESTINATION bin)
