--- a/src/tools/detectSpheres/CMakeLists.txt
+++ b/src/tools/detectSpheres/CMakeLists.txt
@@ -1,13 +1,15 @@
 add_executable(detectSpheres detectSpheres.cc)
 
 if (BUILD_STATIC_TOOLS)
-  target_link_libraries(detectSpheres PUBLIC "-static")
+  target_link_libraries(detectSpheres PRIVATE "-static")
   target_link_libraries(detectSpheres
-    LINK_PUBLIC IRoCS_static_tools segmentation_static_tools
+    PRIVATE IRoCS_static_tools segmentation_static_tools
     cmdline_static_tools)
-else()
+elseif (BUILD_STATIC_LIBS)
   target_link_libraries(detectSpheres
-    LINK_PUBLIC IRoCS segmentation cmdline)
+    PRIVATE IRoCS_static segmentation_static cmdline_static)
+elseif (BUILD_SHARED_LIBS)
+  target_link_libraries(detectSpheres PRIVATE IRoCS segmentation cmdline)
 endif()
 
 install(TARGETS detectSpheres RUNTIME DESTINATION bin)
