--- a/src/libBlitzAnalyze/CMakeLists.txt
+++ b/src/libBlitzAnalyze/CMakeLists.txt
@@ -8,38 +8,37 @@ set(BlitzAnalyze_HEADERS
   BlitzAnalyzeTraits.hh BlitzAnalyzeTraits.icc BlitzAnalyzeType.hh)
 set(BlitzAnalyze_SOURCES BlitzAnalyzeTraits.cc BlitzAnalyzeFile.cc)
 
-add_library(BlitzAnalyze ${BlitzAnalyze_SOURCES} ${BlitzAnalyze_HEADERS})
-set_target_properties(BlitzAnalyze PROPERTIES
-  VERSION ${BlitzAnalyze_VERSION} SOVERSION ${BlitzAnalyze_VERSION_MAJOR})
+if (BUILD_SHARED_LIBS OR BUILD_STATIC_LIBS)
+  # Install development headers
+  install(FILES ${BlitzAnalyze_HEADERS}
+    DESTINATION include/${PACKAGE}/libBlitzAnalyze)
+endif()
 
-target_include_directories(BlitzAnalyze PUBLIC ${BLITZ_INCLUDE_DIRS} )
-target_link_libraries(BlitzAnalyze ${BLITZ_LIBRARIES} )
-
-# Install development headers
-install(FILES ${BlitzAnalyze_HEADERS}
-  DESTINATION include/${PACKAGE}/libBlitzAnalyze)
-
-# Install libraries
-if(WIN32)
-  # On windows store DLLs alongside the binaries
+# Build shared library if requested
+if (BUILD_SHARED_LIBS)
+  add_library(BlitzAnalyze SHARED
+    ${BlitzAnalyze_SOURCES} ${BlitzAnalyze_HEADERS})
+  set_target_properties(BlitzAnalyze PROPERTIES
+    VERSION ${BlitzAnalyze_VERSION} SOVERSION ${BlitzAnalyze_VERSION_MAJOR})
+  target_include_directories(BlitzAnalyze PUBLIC ${BLITZ_INCLUDE_DIRS})
+  target_link_libraries(BlitzAnalyze PUBLIC ${BLITZ_LIBRARIES})
   install(TARGETS BlitzAnalyze
-    LIBRARY DESTINATION bin
-    RUNTIME DESTINATION bin
-    ARCHIVE DESTINATION lib)
-else()
-  install(TARGETS BlitzAnalyze
+    EXPORT iRoCS-ToolboxTargets
     LIBRARY DESTINATION lib
-    ARCHIVE DESTINATION lib)
-endif(WIN32)
+    RUNTIME DESTINATION bin
+    INCLUDES DESTINATION include/${PACKAGE}/libBlitzAnalyze)
+endif()
 
-# Explicitly add static library build if both static and shared libraries
-# are requested
-if(BUILD_STATIC_LIBS AND BUILD_SHARED_LIBS)
+# Build static library if requested
+if(BUILD_STATIC_LIBS)
   add_library(BlitzAnalyze_static STATIC
     ${BlitzAnalyze_SOURCES} ${BlitzAnalyze_HEADERS})
   target_include_directories(BlitzAnalyze_static PUBLIC ${BLITZ_INCLUDE_DIRS})
-  target_link_libraries(BlitzAnalyze_static ${BLITZ_LIBRARIES})
-  install(TARGETS BlitzAnalyze_static ARCHIVE DESTINATION lib)
+  target_link_libraries(BlitzAnalyze_static PUBLIC ${BLITZ_LIBRARIES})
+  install(TARGETS BlitzAnalyze_static
+    EXPORT iRoCS-ToolboxTargets
+    ARCHIVE DESTINATION lib
+    INCLUDES DESTINATION include/${PACKAGE}/libBlitzAnalyze)
 
   # On Linux rename static library to match shared library name
   if(UNIX)
@@ -54,5 +53,6 @@ if(BUILD_STATIC_TOOLS)
     ${BlitzAnalyze_SOURCES} ${BlitzAnalyze_HEADERS})
   target_include_directories(BlitzAnalyze_static_tools
     PUBLIC ${BLITZ_INCLUDE_DIRS})
-  target_link_libraries(BlitzAnalyze_static_tools ${BLITZ_STATIC_LIBRARIES})
+  target_link_libraries(BlitzAnalyze_static_tools
+    PUBLIC ${BLITZ_STATIC_LIBRARIES})
 endif()
