--- a/src/lmbs2kit/CMakeLists.txt
+++ b/src/lmbs2kit/CMakeLists.txt
@@ -10,47 +10,43 @@ set(lmbs2kit_SOURCES
   seminaive.c FST_semi_memo.c primitive.c cospmls.c pmls.c naive_synthesis.c
   makeweights.c csecond.c)
 
-add_library(lmbs2kit ${lmbs2kit_SOURCES} ${lmbs2kit_HEADERS})
-set_target_properties(lmbs2kit PROPERTIES
-  VERSION ${lmbs2kit_VERSION} SOVERSION ${lmbs2kit_VERSION_MAJOR})
-
-target_include_directories(lmbs2kit PUBLIC
-  ${FFTW3_INCLUDE_DIRS} ${FFTW3F_INCLUDE_DIRS})
-target_link_libraries(lmbs2kit ${FFTW3_LIBRARIES} ${FFTW3F_LIBRARIES})
-
-if(UNIX)
-  target_link_libraries(lmbs2kit ${LIBM_LIBRARIES})
+if (BUILD_SHARED_LIBS OR BUILD_STATIC_LIBS)
+  # Install development headers
+  install(FILES ${lmbs2kit_HEADERS} DESTINATION include/${PACKAGE}/lmbs2kit)
 endif()
 
-# Install development headers
-install(FILES ${lmbs2kit_HEADERS} DESTINATION include/${PACKAGE}/lmbs2kit)
-
-# Install libraries
-if(WIN32)
-  # On windows store DLLs alongside the binaries
-  install(TARGETS lmbs2kit
-    LIBRARY DESTINATION bin
-    RUNTIME DESTINATION bin
-    ARCHIVE DESTINATION lib)
-else()
-  install(TARGETS lmbs2kit
-    LIBRARY DESTINATION lib
-    ARCHIVE DESTINATION lib)
-endif(WIN32)
-
-# Explicitly add static library build if both static and shared libraries
-# are requested
-if(BUILD_STATIC_LIBS AND BUILD_SHARED_LIBS)
-  add_library(lmbs2kit_static STATIC ${lmbs2kit_SOURCES} ${lmbs2kit_HEADERS})
-  target_include_directories(lmbs2kit_static PUBLIC
-    ${FFTW3_INCLUDE_DIRS} ${FFTW3F_INCLUDE_DIRS})
-  target_link_libraries(lmbs2kit_static ${FFTW3_LIBRARIES} ${FFTW3F_LIBRARIES})
-
+# Build shared library if requested
+if (BUILD_SHARED_LIBS)
+  add_library(lmbs2kit SHARED ${lmbs2kit_SOURCES} ${lmbs2kit_HEADERS})
+  set_target_properties(lmbs2kit PROPERTIES
+    VERSION ${lmbs2kit_VERSION} SOVERSION ${lmbs2kit_VERSION_MAJOR})
+  target_include_directories(lmbs2kit
+    PUBLIC ${FFTW3_INCLUDE_DIRS} ${FFTW3F_INCLUDE_DIRS})
+  target_link_libraries(lmbs2kit PUBLIC ${FFTW3_LIBRARIES} ${FFTW3F_LIBRARIES})
   if(UNIX)
-    target_link_libraries(lmbs2kit_static ${LIBM_LIBRARIES})
+    target_link_libraries(lmbs2kit PUBLIC ${LIBM_LIBRARIES})
   endif()
+  install(TARGETS lmbs2kit
+    EXPORT iRoCS-ToolboxTargets
+    LIBRARY DESTINATION lib
+    RUNTIME DESTINATION bin
+    INCLUDES DESTINATION include/${PACKAGE}/lmbs2kit)
+endif()
 
-  install(TARGETS lmbs2kit_static ARCHIVE DESTINATION lib)
+# Build static library if requested
+if(BUILD_STATIC_LIBS)
+  add_library(lmbs2kit_static STATIC ${lmbs2kit_SOURCES} ${lmbs2kit_HEADERS})
+  target_include_directories(lmbs2kit_static
+    PUBLIC ${FFTW3_INCLUDE_DIRS} ${FFTW3F_INCLUDE_DIRS})
+  target_link_libraries(lmbs2kit_static
+    PUBLIC ${FFTW3_LIBRARIES} ${FFTW3F_LIBRARIES})
+  if(UNIX)
+    target_link_libraries(lmbs2kit_static PUBLIC ${LIBM_LIBRARIES})
+  endif()
+  install(TARGETS lmbs2kit_static
+    EXPORT iRoCS-ToolboxTargets
+    ARCHIVE DESTINATION lib
+    INCLUDES DESTINATION include/${PACKAGE}/lmbs2kit)
 
   # On Linux rename static library to match shared library name
   if(UNIX)
@@ -62,12 +58,11 @@ endif()
 if(BUILD_STATIC_TOOLS)
   add_library(lmbs2kit_static_tools STATIC
     ${lmbs2kit_SOURCES} ${lmbs2kit_HEADERS})
-  target_include_directories(lmbs2kit_static_tools PUBLIC
-    ${FFTW3_INCLUDE_DIRS} ${FFTW3F_INCLUDE_DIRS})
-  target_link_libraries(lmbs2kit_static_tools ${FFTW3_STATIC_LIBRARIES}
-    ${FFTW3F_STATIC_LIBRARIES})
-
+  target_include_directories(lmbs2kit_static_tools
+    PUBLIC ${FFTW3_INCLUDE_DIRS} ${FFTW3F_INCLUDE_DIRS})
+  target_link_libraries(lmbs2kit_static_tools
+    PUBLIC ${FFTW3_STATIC_LIBRARIES} ${FFTW3F_STATIC_LIBRARIES})
   if(UNIX)
-    target_link_libraries(lmbs2kit_static_tools ${LIBM_STATIC_LIBRARIES})
+    target_link_libraries(lmbs2kit_static_tools PUBLIC ${LIBM_STATIC_LIBRARIES})
   endif()
 endif()
