--- a/src/plugins/RootSegmentation/CMakeLists.txt
+++ b/src/plugins/RootSegmentation/CMakeLists.txt
@@ -12,41 +12,13 @@ set(PluginRootSegmentation_SOURCES
   RootSegmentationParametersDialog.cc RootSegmentationThread.cc
   PluginRootSegmentation.cc)
 
-add_library(PluginRootSegmentation
+add_library(PluginRootSegmentation MODULE
   ${PluginRootSegmentation_SOURCES} ${PluginRootSegmentation_HEADERS})
-target_link_libraries(PluginRootSegmentation Labelling_qt4 IRoCS)
 
-# Install development headers
-install(FILES ${PluginRootSegmentation_HEADERS}
-  DESTINATION include/${PACKAGE}/plugins/libPluginRootSegmentation)
+target_link_libraries(PluginRootSegmentation PRIVATE Labelling_qt4 IRoCS)
 
-# Install libraries
-if(WIN32)
-  # On windows store DLLs alongside the binaries
-  install(TARGETS PluginRootSegmentation
-    LIBRARY DESTINATION share/${PACKAGE}/plugins NAMELINK_SKIP
-    RUNTIME DESTINATION share/${PACKAGE}/plugins
-    ARCHIVE DESTINATION lib)
-else()
-  install(TARGETS PluginRootSegmentation
-    LIBRARY DESTINATION share/${PACKAGE}/plugins NAMELINK_SKIP
-    ARCHIVE DESTINATION lib)
-endif(WIN32)
-
-# Explicitly add static library build if both static and shared libraries are
-# requested
-if(BUILD_STATIC_LIBS AND BUILD_SHARED_LIBS)
-  add_library(PluginRootSegmentation_static STATIC
-    ${PluginRootSegmentation_SOURCES} ${PluginRootSegmentation_HEADERS})
-  target_link_libraries(PluginRootSegmentation_static Labelling_qt4 IRoCS)
-  install(TARGETS PluginRootSegmentation_static ARCHIVE DESTINATION lib)
-
-  # On Linux rename static library to match shared library name
-  if(UNIX)
-    SET_TARGET_PROPERTIES(PluginRootSegmentation_static PROPERTIES
-      OUTPUT_NAME PluginRootSegmentation CLEAN_DIRECT_OUTPUT 1)
-  endif(UNIX)
-
-endif(BUILD_STATIC_LIBS AND BUILD_SHARED_LIBS)
+install(TARGETS PluginRootSegmentation
+  LIBRARY DESTINATION share/${PACKAGE}/plugins NAMELINK_SKIP
+  RUNTIME DESTINATION share/${PACKAGE}/plugins)
 
 set(CMAKE_AUTOMOC OFF)
