--- a/src/plugins/TrainDetector/CMakeLists.txt
+++ b/src/plugins/TrainDetector/CMakeLists.txt
@@ -12,41 +12,13 @@ set(PluginTrainDetector_SOURCES
   TrainDetectorTrainfileParametersItem.cc TrainDetectorParametersDialog.cc
   TrainDetectorThread.cc PluginTrainDetector.cc)
 
-add_library(PluginTrainDetector
+add_library(PluginTrainDetector MODULE
   ${PluginTrainDetector_SOURCES} ${PluginTrainDetector_HEADERS})
-target_link_libraries(PluginTrainDetector Labelling_qt4 IRoCS)
 
-# Install development headers
-install(FILES ${PluginTrainDetector_HEADERS}
-  DESTINATION include/${PACKAGE}/plugins/libPluginTrainDetector)
+target_link_libraries(PluginTrainDetector PRIVATE Labelling_qt4 IRoCS)
 
-# Install libraries
-if(WIN32)
-  # On windows store DLLs alongside the binaries
-  install(TARGETS PluginTrainDetector
-    LIBRARY DESTINATION share/${PACKAGE}/plugins NAMELINK_SKIP
-    RUNTIME DESTINATION share/${PACKAGE}/plugins
-    ARCHIVE DESTINATION lib)
-else()
-  install(TARGETS PluginTrainDetector
-    LIBRARY DESTINATION share/${PACKAGE}/plugins NAMELINK_SKIP
-    ARCHIVE DESTINATION lib)
-endif(WIN32)
-
-# Explicitly add static library build if both static and shared libraries are
-# requested
-if(BUILD_STATIC_LIBS AND BUILD_SHARED_LIBS)
-  add_library(PluginTrainDetector_static STATIC
-    ${PluginTrainDetector_SOURCES} ${PluginTrainDetector_HEADERS})
-  target_link_libraries(PluginTrainDetector_static Labelling_qt4 IRoCS)
-  install(TARGETS PluginTrainDetector_static ARCHIVE DESTINATION lib)
-
-  # On Linux rename static library to match shared library name
-  if(UNIX)
-    SET_TARGET_PROPERTIES(PluginTrainDetector_static PROPERTIES
-      OUTPUT_NAME PluginTrainDetector CLEAN_DIRECT_OUTPUT 1)
-  endif(UNIX)
-
-endif(BUILD_STATIC_LIBS AND BUILD_SHARED_LIBS)
+install(TARGETS PluginTrainDetector
+  LIBRARY DESTINATION share/${PACKAGE}/plugins NAMELINK_SKIP
+  RUNTIME DESTINATION share/${PACKAGE}/plugins)
 
 set(CMAKE_AUTOMOC OFF)
