--- a/src/tools/assignLayersToSegmentation/CMakeLists.txt
+++ b/src/tools/assignLayersToSegmentation/CMakeLists.txt
@@ -1,13 +1,16 @@
 add_executable(assignLayersToSegmentation assignLayersToSegmentation.cc)
 
 if (BUILD_STATIC_TOOLS)
-  target_link_libraries(assignLayersToSegmentation PUBLIC "-static")
+  target_link_libraries(assignLayersToSegmentation PRIVATE "-static")
   target_link_libraries(assignLayersToSegmentation
-    LINK_PUBLIC IRoCS_static_tools segmentation_static_tools
+    PRIVATE IRoCS_static_tools segmentation_static_tools
     cmdline_static_tools)
-else()
+elseif (BUILD_STATIC_LIBS)
   target_link_libraries(assignLayersToSegmentation
-    LINK_PUBLIC IRoCS segmentation cmdline)
+    PRIVATE IRoCS_static segmentation_static cmdline_static)
+elseif (BUILD_SHARED_LIBS)
+  target_link_libraries(assignLayersToSegmentation
+    PRIVATE IRoCS segmentation cmdline)
 endif()
 
 install(TARGETS assignLayersToSegmentation RUNTIME DESTINATION bin)
