--- a/src/tools/attachIRoCS/CMakeLists.txt
+++ b/src/tools/attachIRoCS/CMakeLists.txt
@@ -1,12 +1,15 @@
 add_executable(attachIRoCS attachIRoCS.cc)
 
 if (BUILD_STATIC_TOOLS)
-  target_link_libraries(attachIRoCS PUBLIC "-static")
+  target_link_libraries(attachIRoCS PRIVATE "-static")
   target_link_libraries(attachIRoCS
-    LINK_PUBLIC IRoCS_static_tools segmentation_static_tools
+    PRIVATE IRoCS_static_tools segmentation_static_tools
     cmdline_static_tools)
-else()
-  target_link_libraries(attachIRoCS LINK_PUBLIC IRoCS segmentation cmdline)
+elseif (BUILD_STATIC_LIBS)
+  target_link_libraries(attachIRoCS
+    PRIVATE IRoCS_static segmentation_static cmdline_static)
+elseif (BUILD_SHARED_LIBS)
+  target_link_libraries(attachIRoCS PRIVATE IRoCS segmentation cmdline)
 endif()
 
 install(TARGETS attachIRoCS RUNTIME DESTINATION bin)
