--- a/src/tools/labelEpidermis/CMakeLists.txt
+++ b/src/tools/labelEpidermis/CMakeLists.txt
@@ -1,12 +1,15 @@
 add_executable(labelEpidermis labelEpidermis.cc)
 
 if (BUILD_STATIC_TOOLS)
-  target_link_libraries(labelEpidermis PUBLIC "-static")
+  target_link_libraries(labelEpidermis PRIVATE "-static")
   target_link_libraries(labelEpidermis
-    LINK_PUBLIC IRoCS_static_tools segmentation_static_tools
+    PRIVATE IRoCS_static_tools segmentation_static_tools
     cmdline_static_tools)
-else()
-  target_link_libraries(labelEpidermis LINK_PUBLIC IRoCS segmentation cmdline)
+elseif (BUILD_STATIC_LIBS)
+  target_link_libraries(labelEpidermis
+    PRIVATE IRoCS_static segmentation_static cmdline_static)
+elseif (BUILD_SHARED_LIBS)
+  target_link_libraries(labelEpidermis PRIVATE IRoCS segmentation cmdline)
 endif()
 
 install(TARGETS labelEpidermis RUNTIME DESTINATION bin)
