--- a/src/tools/trainLayerAssignmentForSegmentation/CMakeLists.txt
+++ b/src/tools/trainLayerAssignmentForSegmentation/CMakeLists.txt
@@ -2,13 +2,16 @@ add_executable(trainLayerAssignmentForSegmentation
   trainLayerAssignmentForSegmentation.cc)
 
 if (BUILD_STATIC_TOOLS)
-  target_link_libraries(trainLayerAssignmentForSegmentation PUBLIC "-static")
+  target_link_libraries(trainLayerAssignmentForSegmentation PRIVATE "-static")
   target_link_libraries(trainLayerAssignmentForSegmentation
-    LINK_PUBLIC IRoCS_static_tools segmentation_static_tools
+    PRIVATE IRoCS_static_tools segmentation_static_tools
     cmdline_static_tools)
-else()
+elseif (BUILD_STATIC_LIBS)
   target_link_libraries(trainLayerAssignmentForSegmentation
-    LINK_PUBLIC IRoCS segmentation cmdline)
+    PRIVATE IRoCS_static segmentation_static cmdline_static)
+elseif (BUILD_SHARED_LIBS)
+  target_link_libraries(trainLayerAssignmentForSegmentation
+    PRIVATE IRoCS segmentation cmdline)
 endif()
 
 install(TARGETS trainLayerAssignmentForSegmentation RUNTIME DESTINATION bin)
